[project]
name = "py-mpc-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.4",
    "poethepoet>=0.48.0",
    "requests>=2.34.2",
]

[tool.poe.tasks]
prod = "docker compose up -d --build mcp-server"
prod_logs = "docker compose logs -f mcp-server"